Dev/src/LeanData/objects/Routing_Deployment__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Graph_JSON_2__c</fullName>
        <label>Graph_JSON_2__c</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Graph_JSON_3__c</fullName>
        <label>Graph_JSON_3__c</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Graph_JSON_4__c</fullName>
        <label>Graph_JSON_4__c</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Graph_JSON_Hash__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graph_JSON__c</fullName>
        <label>Graph_JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Graph_Version__c</fullName>
        <label>Graph Version</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric_Translation_JSON__c</fullName>
        <label>Metric Translation JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalId>true</externalId>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Node_Name_To_Height_Map__c</fullName>
        <label>Node Name to Height Map</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <externalId>true</externalId>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Deployment</label>
        <referenceTo>Routing_Deployment__c</referenceTo>
        <relationshipLabel>Parent Deployments</relationshipLabel>
        <relationshipName>Parent_Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Graph__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Graph</label>
        <referenceTo>Routing_Graph__c</referenceTo>
        <relationshipLabel>Parent Graphs</relationshipLabel>
        <relationshipName>Parent_Graphs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Presence_Map__c</fullName>
        <label>Node Presence Map</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Query_Fields__c</fullName>
        <label>Query Fields</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Routing Deployment</label>
    <nameField>
        <label>Routing_Deployment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routing Deployments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>